<resources>
    <string name="app_name">Skinnea Apps</string>
    <string name="copyright">© Skinnea_Teamz</string>
    <string name="listMenu">Menu</string>
    <string name="check">Setuju</string>
    <string name="title">Term of Service</string>
    <string name="term">Jika login menggunakan Google, hasil identifikasi penyakit kulit mu akan disimpan dalam database Firebase untuk history dan tujuan pengembangan aplikasi. Untuk saat ini, belum ada fitur untuk mengelola history kamu, data history kamu akan disimpan dan akan dihapus selama 24 jam</string>
    <string name="welcome">Hii.., %1$s Welcome!</string>
    <string name="back">Kembali</string>
    <string name="oke">Oke</string>
    <string name="notOke">Harap centang</string>
    <string name="upload">Scan</string>
    <string name="medicDesc">Khasiat</string>
    <string name="medics">Pengobatan</string>
    <string name="medicSuggest">Pemakaian</string>
    <string name="medicName">Nama Obat</string>
    <string name="skinDiagnosis">Result Nama Penyakit</string>
    <string name="restart">Scan Ulang</string>
    <string name="loading"> Tunggu sebentar.. ^^</string>
    <string name="nameProfile">Guest</string>
    <string name="result">Nama Penyakit</string>
    <string name="accurate">Akurasi</string>
    <string name="emailProfile">non-email</string>
    <string name="error">Maaf.. terjadi kesalahan koneksi.</string>
    <string name="notFound">Maaf.. pencarian tak ditemukan</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="hint">Cari berita.., eg: detik</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Kamera</string>
    <string name="resultNameSkin">Nama Skin</string>
    <string name="resultAccuracySkin">Accuracy</string>
    <string name="resultDescSkin">Isi Deskripsi Skin</string>
    <string name="textNameHerb">Nama Obat</string>
    <string name="textDescHerb">Isi Deskripsi Obat</string>
    <string name="emailTeam"> skinneateam@gmail.com</string>
    <string name="versionApp"> version 1.0~Beta</string>
    <string name="about">Abstract :</string>
    <string name="aboutUs">Kulit merupakan organ yang pertama kali terpapar rangsangan dari luar, termasuk suhu, sentuhan, dan rangsangan lainnya, sehingga penyakit kulit merupakan jenis penyakit yang paling umum dan menyebar dengan cepat pada manusia. Identifikasi penyakit kulit yang akurat sangat penting dalam pengobatan penyakit kulit. Namun, terkadang dokter kesulitan mengidentifikasi jenis penyakit kulit yang tepat karena beberapa jenis penyakit kulit memiliki gejala yang mirip atau warna dan tekstur yang hampir sama. Untuk membantu para dokter dalam mengidentifikasi jenis-jenis penyakit kulit, kami mencoba membuat sebuah penelitian untuk mengidentifikasi jenis-jenis penyakit kulit dengan menggunakan sistem pengolahan data citra.</string>

    //content description
    <string name="camera_button_description">camera</string>
    <string name="about_button_description">about</string>
    <string name="menu_button_description">camera</string>
    <string name="logowelcome_description">selamat datang</string>
    <string name="logohistory_description">history result</string>
    <string name="logomenu1_description">logo</string>
    <string name="logomenu2_description">logo2</string>
    <string name="logomenu3_description">logo3</string>
    <string name="logomenu4_description">logo4</string>
    <string name="captureImage_description">tangkap gambar</string>
    <string name="galleryImage_description">gallery</string>
    <string name="switchCamera_description">switch camera</string>
    <string name="previewImageView_description">preview gambar</string>
    <string name="openWeb_description">lihat berita</string>
    <string name="openDetail_description">lihat detail</string>
    <string name="buttonLogout_description">logout</string>
    <string name="imgProfile_description">profile</string>
    <string name="imgSkin_description">skin result</string>
    <string name="detailPhoto_description">detail gambar</string>
    <string name="news">News</string>
    <string name="newsImgError_description">error</string>
</resources>