<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchCamera"/>

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:background="@color/white"
        android:text="@string/loading"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.046" />

    <include
        android:id="@+id/previewImage"
        layout="@layout/preview_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchCamera" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/galleryImage"
                app:layout_constraintEnd_toEndOf="@+id/galleryImage"
                app:layout_constraintStart_toStartOf="@+id/galleryImage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/camera"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/captureImage"
                app:layout_constraintEnd_toEndOf="@+id/captureImage"
                app:layout_constraintStart_toStartOf="@+id/captureImage" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/galleryImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:borderWidth="0dp"
                app:elevation="5dp"
                android:src="@drawable/baseline_image_24"
                app:fabCustomSize="50dp"
                app:maxImageSize="30dp"
                app:tint="@color/blue_day"
                android:contentDescription="@string/galleryImage_description"
                app:layout_constraintBottom_toBottomOf="@+id/captureImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/captureImage"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/captureImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                app:borderWidth="0dp"
                app:elevation="5dp"
                app:srcCompat="@drawable/baseline_camera_alt_24"
                app:fabCustomSize="60dp"
                app:maxImageSize="40dp"
                app:tint="@color/blue_day"
                android:contentDescription="@string/captureImage_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/switchCamera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_switch_camera"
        android:contentDescription="@string/switchCamera_description" />
</androidx.constraintlayout.widget.ConstraintLayout>