<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_about_scene"
    tools:context=".ui.about.AboutActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAbout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/copyrightTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.02"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineHorizontal3"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.38"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guidelineVertical"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/emailButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/captureImage_description"
                    app:borderWidth="0dp"
                    app:elevation="5dp"
                    app:fabCustomSize="60dp"
                    app:layout_constraintBottom_toBottomOf="@+id/about"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/about"
                    app:maxImageSize="40dp"
                    app:srcCompat="@drawable/baseline_email_24"
                    app:tint="@color/blue_day" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfileTeam"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/imgProfile_description"
                    android:src="@drawable/logo_team"
                    android:transitionName="photo"
                    app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

                <TextView
                    android:id="@+id/emailTeam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/emailTeam"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/baseline_email_24"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
                    app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
                    app:layout_constraintTop_toBottomOf="@+id/imgProfileTeam" />

                <TextView
                    android:id="@+id/versionApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/versionApp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/baseline_android_24"
                    app:layout_constraintEnd_toEndOf="@+id/emailTeam"
                    app:layout_constraintStart_toStartOf="@+id/emailTeam"
                    app:layout_constraintTop_toBottomOf="@+id/emailTeam" />

                <TextView
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/about"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/versionApp" />

                <TextView
                    android:id="@+id/aboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/aboutUs"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/copyrightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/copyright"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>